# rust-c-interop-poc

./: .gitignore  README.md
c/lib/: CMakeLists.txt  uwe_c_lib.c  uwe_c_lib.h
rs/: Cargo.toml
rs/crates/uwe-rs-bin/: Cargo.toml  build.rs  requirements  wrapper.h
rs/crates/uwe-rs-bin/src/: main.rs
rs/crates/uwe-rs-lib/: Cargo.toml
rs/crates/uwe-rs-lib/src/: lib.rs  uwe_rust_lib.rs
